--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 img, ins, kbd, q, s, code, samp, small, strike, strong, sub, sup, tt, var, b, u, i, pre, center, dl, dt, dd, ol, ul, li, fieldset, form,
 label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header,
 hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video, article, aside, details, figcaption, figure, footer, header,
-button, hgroup, menu, nav, section {
+button, hgroup, menu, nav, section, input {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
