--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -1,9 +1,32 @@
-.App {
-	width: 350px;
+.app {
+	width: 360px;
 	height: 500px;
 	padding: 16px 24px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-between;
+}
+
+.title {
+	font-size: 24px;
+	text-align: center;
+}
+
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	gap: 24px;
+	width: 100%;
+	max-height: 360px;
+	overflow: hidden scroll;
+}
+
+.btn_wrapper {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	gap: 16px;
+	justify-self: flex-end;
 }
