--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -1,6 +1,12 @@
 .input {
-	padding: 4px 8px;
 	width: 100%;
-	color: var(--dark);
+	padding: 4px 8px;
+	color: var(--light);
 	font-size: 16px;
+	border: 1px solid var(--light);
+	border-radius: 6px;
+	transition: 0.3s all ease;
+	&:hover {
+		box-shadow: 3px 3px 10px var(--light);
+	}
 }
