--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -5,7 +5,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: space-between;
+	gap: 16px;
 }
 
 .title {
@@ -29,4 +29,5 @@
 	align-items: center;
 	gap: 16px;
 	justify-self: flex-end;
+	margin-top: auto;
 }
