--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -10,3 +10,21 @@
 		box-shadow: 3px 3px 10px var(--light);
 	}
 }
+
+.label {
+	width: 100%;
+	&:not(input:focus) {
+		span {
+			display: none;
+		}
+	}
+	&:is(input:not(:placeholder-shown)) {
+		span {
+			display: block;
+		}
+	}
+}
+.label_text {
+	text-transform: capitalize;
+	transition: 0.3s all ease;
+}
